--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,26 @@
 version: '3.8'
 
 services:
+  mysql:
+    image: mysql:8.0
+    container_name: notification-mysql
+    restart: unless-stopped
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: notification_service_dev
+      MYSQL_USER: notification_user
+      MYSQL_PASSWORD: notification_pass
+    ports:
+      - '3306:3306'
+    volumes:
+      - mysql_data:/var/lib/mysql
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    command: --default-authentication-plugin=mysql_native_password
+    healthcheck:
+      test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
+      timeout: 20s
+      retries: 10
+
   rabbitmq:
     image: rabbitmq:3.12-management
     container_name: notification-rabbitmq
@@ -20,5 +40,7 @@ services:
       retries: 3
 
 volumes:
+  mysql_data:
+    driver: local
   rabbitmq_data:
     driver: local
