--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "author": "AI Outlet Team",
   "license": "MIT",
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "amqplib": "^0.10.8",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^3.6.0"
+    "mysql2": "^3.14.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
