feat: add email service integration with SMTP support and test endpoint

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,14 @@ RABBITMQ_URL=amqp://guest:guest@localhost:5672
 RABBITMQ_EXCHANGE_ORDER=order.events
 RABBITMQ_EXCHANGE_USER=user.events
 RABBITMQ_QUEUE_NOTIFICATIONS=notifications
+
+# Email Configuration
+EMAIL_ENABLED=true
+EMAIL_PROVIDER=smtp
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+EMAIL_FROM_NAME=AI Outlet Notifications
+EMAIL_FROM_ADDRESS=noreply@aioutlet.com
