--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "author": "AI Outlet Team",
   "license": "MIT",
   "dependencies": {
+    "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^10.0.0",
     "amqplib": "^0.10.8",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
