--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.18.2",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
