feat: Add monitoring routes and service for metrics collection
- Created monitoring.routes.ts to handle metrics and health check endpoints.
- Implemented MonitoringService for tracking metrics and health status.
- Integrated monitoring into email and notification services for better observability.
- Enhanced message consumer with retry logic and dead letter queue handling.
- Added metrics recording for notifications and email sending.
- Updated notification and template routes to include authentication and validation.
- Improved server shutdown process with graceful handling of connections and resources.

--- a/.env.example
+++ b/.env.example
@@ -28,4 +28,10 @@ SMTP_SECURE=false
 SMTP_USER=your-email@gmail.com
 SMTP_PASS=your-app-password
 EMAIL_FROM_NAME=AI Outlet Notifications
+
+# Authentication Configuration (Production Security)
+# JWT_SECRET=your-jwt-secret-key-here
+
+# CORS Configuration (Production)
+# ALLOWED_ORIGINS=https://yourdomain.com,https://admin.yourdomain.com
 EMAIL_FROM_ADDRESS=noreply@aioutlet.com
