--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,7 +14,7 @@ services:
       - '3306:3306'
     volumes:
       - mysql_dev_data:/var/lib/mysql
-      - ./src/database/schema.sql:/docker-entrypoint-initdb.d/01-schema.sql:ro
+      - ./database/schemas/notifications.sql:/docker-entrypoint-initdb.d/01-schema.sql:ro
     command: --default-authentication-plugin=mysql_native_password
     healthcheck:
       test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
