--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false"
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "db:seed": "tsx database/scripts/seed.ts",
+    "db:clear": "tsx database/scripts/clear.ts"
   },
   "keywords": [
     "notifications",
@@ -48,6 +50,7 @@
     "@types/amqplib": "^0.10.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^30.0.0",
+    "@types/mysql2": "github:types/mysql2",
     "@types/node": "^20.19.1",
     "@types/supertest": "^6.0.3",
     "jest": "^30.0.3",
