--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,71 +1,68 @@
 version: '3.8'
 
 services:
+  notification-service:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: notification-service-docker
+    restart: unless-stopped
+    ports:
+      - '3003:3003'
+    environment:
+      - NODE_ENV=development
+      - PORT=3003
+      - HOST=0.0.0.0
+      - DB_HOST=mysql
+      - DB_PORT=3306
+      - DB_NAME=notification_service_dev
+      - DB_USER=notification_user
+      - DB_PASSWORD=notification_dev_pass_123
+      - RABBITMQ_URL=amqp://admin:admin123@aioutlet-rabbitmq:5672
+      - USER_SERVICE_URL=http://host.docker.internal:3002
+      - JWT_SECRET=notification_service_jwt_dev_secret_123
+      - LOG_LEVEL=debug
+      - CORS_ORIGIN=http://localhost:3000,http://localhost:3010
+    depends_on:
+      mysql:
+        condition: service_healthy
+    networks:
+      - aioutlet-network
+    healthcheck:
+      test: ['CMD', 'curl', '-f', 'http://localhost:3003/health']
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+
   mysql:
     image: mysql:8.0
-    container_name: notification-mysql-dev
+    container_name: notification-mysql-docker
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: notification_service_dev
-      MYSQL_USER: notification_user
-      MYSQL_PASSWORD: notification_pass
+      - MYSQL_ROOT_PASSWORD=mysql_root_dev_123
+      - MYSQL_DATABASE=notification_service_dev
+      - MYSQL_USER=notification_user
+      - MYSQL_PASSWORD=notification_dev_pass_123
     ports:
-      - '3306:3306'
+      - '3307:3306'
     volumes:
-      - mysql_dev_data:/var/lib/mysql
+      - mysql_data:/var/lib/mysql
       - ./database/schemas/notifications.sql:/docker-entrypoint-initdb.d/01-schema.sql:ro
     command: --default-authentication-plugin=mysql_native_password
     healthcheck:
       test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
       timeout: 20s
       retries: 10
-
-  rabbitmq:
-    image: rabbitmq:3.12-management
-    container_name: notification-rabbitmq-dev
-    restart: unless-stopped
-    environment:
-      RABBITMQ_DEFAULT_USER: guest
-      RABBITMQ_DEFAULT_PASS: guest
-    ports:
-      - '5672:5672' # AMQP port
-      - '15672:15672' # Management UI port
-    volumes:
-      - rabbitmq_dev_data:/var/lib/rabbitmq
-    healthcheck:
-      test: rabbitmq-diagnostics -q ping
-      interval: 30s
-      timeout: 30s
-      retries: 3
-
-  notification-service:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: notification-service-dev
-    restart: unless-stopped
-    ports:
-      - '3003:3003'
-    environment:
-      - NODE_ENV=development
-      - DB_HOST=mysql
-      - DB_USER=notification_user
-      - DB_PASSWORD=notification_pass
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
-      - USER_SERVICE_URL=http://host.docker.internal:3001
-    depends_on:
-      mysql:
-        condition: service_healthy
-      rabbitmq:
-        condition: service_healthy
-    volumes:
-      - .:/app
-      - /app/node_modules
-    command: npm run dev
+      start_period: 30s
+    networks:
+      - aioutlet-network
 
 volumes:
-  mysql_dev_data:
+  mysql_data:
     driver: local
-  rabbitmq_dev_data:
-    driver: local
+
+networks:
+  aioutlet-network:
+    external: true
+    name: aioutlet-network
