--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       start_period: 30s
 
   mysql:
-    image: mysql:8.0
+    image: mysql:latest
     container_name: notification-mysql-docker
     restart: unless-stopped
     environment:
