feat: add ESLint for code quality and linting scripts
refactor: remove unused logger import in app.ts

refactor: clean up notification.controller.ts by removing unused imports

refactor: update operational.controller.ts to use proper types for request and response

refactor: enhance asyncHandler middleware with specific function types

refactor: remove unused config import in auth.middleware.ts

fix: improve error handling in globalErrorHandler middleware

refactor: update security.middleware.ts to use more specific types and improve input sanitization

refactor: clean up template.routes.ts by removing unused imports

refactor: enhance database.service.ts with better type definitions and add execute method for metadata queries

refactor: update message-consumer.ts to remove unused imports

refactor: improve notification.service.ts with better type definitions and error handling

refactor: update template.service.ts to use execute method for database operations

refactor: enhance ErrorResponse class with unknown type for details

refactor: update logger.ts to use unknown type for logging arguments

fix: update schemas.ts to correct phone number regex

test: clean up template.controller.test.ts by removing unused imports

test: fix database.service.test.ts to mock connection correctly

test: clean up email.service.test.ts by removing unused imports

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --watchAll=false",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "db:seed": "tsx database/scripts/seed.ts",
     "db:clear": "tsx database/scripts/clear.ts"
   },
@@ -53,6 +55,9 @@
     "@types/mysql2": "github:types/mysql2",
     "@types/node": "^20.19.1",
     "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "eslint": "^9.34.0",
     "jest": "^30.0.3",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
