Remove direct GitHub dependency for @types/mysql2 in package.json

--- a/.dockerignore
+++ b/.dockerignore
@@ -74,9 +74,6 @@ temp/
 *.temp
 *~
 
-# TypeScript config
-tsconfig*.json
-
 # Jest
 jest.config.*
 
@@ -93,6 +90,5 @@ prettier.config.*
 .gitlab-ci.yml
 Jenkinsfile
 
-# Package lock files (keep one)
-package-lock.json
+# Package lock files (exclude yarn.lock but keep package-lock.json for npm ci)
 yarn.lock
