--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
   "author": "AI Outlet Team",
   "license": "MIT",
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.52.1",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.55.0",
+    "@opentelemetry/sdk-node": "^0.55.0",
     "@types/compression": "^1.8.1",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
@@ -46,6 +50,7 @@
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
     "uuid": "^11.1.0",
+    "winston": "^3.17.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
