feat(env): add environment configuration files for local, development, and production setups

--- a/.env.local
+++ b/.env.local
@@ -7,7 +7,7 @@
 # =============================================================================
 # Service Configuration
 # =============================================================================
-NODE_ENV=development
+NODE_ENV=local
 PORT=3003
 HOST=localhost
 SERVICE_NAME=notification-service
