--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 # =============================================================================
-# Notification Service Local Development Configuration
+# Notification Service Environment Configuration Template
 # =============================================================================
-# This file is used for VS Code debugging when infrastructure runs in Docker
-# Copied to .env automatically by scripts/deploy.sh local
+# This file serves as a template for creating environment-specific .env files
+# Copy this file and rename it to .env, then fill in the appropriate values
 
 # =============================================================================
 # Service Configuration
 # =============================================================================
-NODE_ENV=development
+NODE_ENV=local
 PORT=3003
 HOST=localhost
 SERVICE_NAME=notification-service
@@ -17,18 +17,18 @@ API_VERSION=1.0.0
 # =============================================================================
 # Database Configuration
 # =============================================================================
-# MySQL connection - connects to Docker infrastructure
+# MySQL connection settings
 DB_HOST=localhost
 DB_PORT=3306
-DB_NAME=notification_service_local_db
+DB_NAME=notification_service_db
 DB_USER=notification_user
-DB_PASSWORD=notification_dev_pass_123
+DB_PASSWORD=your-mysql-password
 
 # =============================================================================
 # Message Broker Configuration
 # =============================================================================
-# Connects to Docker infrastructure
-RABBITMQ_URL=amqp://admin:admin123@localhost:5672
+# RabbitMQ connection and queue configuration
+RABBITMQ_URL=amqp://username:password@localhost:5672
 RABBITMQ_EXCHANGE_ORDER=order.events
 RABBITMQ_EXCHANGE_USER=user.events
 RABBITMQ_EXCHANGE_NOTIFICATION=notification.events
@@ -40,7 +40,7 @@ RABBITMQ_QUEUE_PUSH=notifications.push
 # =============================================================================
 # Service Discovery
 # =============================================================================
-# Infrastructure services - connects to other microservices
+# URLs for connecting to other microservices
 USER_SERVICE_URL=http://localhost:3002
 AUTH_SERVICE_URL=http://localhost:3001
 ADMIN_SERVICE_URL=http://localhost:3010
@@ -49,37 +49,37 @@ AUDIT_SERVICE_URL=http://localhost:9000
 # =============================================================================
 # Cache Configuration
 # =============================================================================
-# Redis connection - connects to Docker infrastructure, uses database 5
+# Redis connection settings - notification service uses database 5
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=redis_dev_pass_123
+REDIS_PASSWORD=your-redis-password
 REDIS_DB=5
-REDIS_URL=redis://:redis_dev_pass_123@localhost:6379/5
+REDIS_URL=redis://:your-redis-password@localhost:6379/5
 
 # =============================================================================
 # Security Configuration
 # =============================================================================
-JWT_SECRET=your-super-secret-jwt-key-for-development-only
+JWT_SECRET=your-jwt-secret-key-at-least-256-bits-long
 JWT_EXPIRE=24h
 
 # =============================================================================
 # Email Configuration
 # =============================================================================
-# Email service for notifications (development)
+# Email service for notifications
 EMAIL_ENABLED=true
 EMAIL_PROVIDER=smtp
-SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_HOST=your-smtp-host
 SMTP_PORT=587
 SMTP_SECURE=false
-SMTP_USER=bb31a0d6531b6c
-SMTP_PASS=6bd971ab2573bc
-EMAIL_FROM_NAME=AI Outlet Notifications
-EMAIL_FROM_ADDRESS=noreply@aioutlet.com
+SMTP_USER=your-smtp-username
+SMTP_PASS=your-smtp-password
+EMAIL_FROM_NAME=Your App Notifications
+EMAIL_FROM_ADDRESS=noreply@yourdomain.com
 
 # =============================================================================
 # SMS Configuration
 # =============================================================================
-# SMS service for notifications (development)
+# SMS service for notifications (Twilio)
 SMS_ENABLED=false
 SMS_PROVIDER=twilio
 TWILIO_ACCOUNT_SID=your-twilio-account-sid
@@ -89,7 +89,7 @@ SMS_FROM_NUMBER=your-twilio-phone-number
 # =============================================================================
 # Push Notification Configuration
 # =============================================================================
-# Push notification service (development)
+# Firebase Cloud Messaging for push notifications
 PUSH_ENABLED=false
 FCM_SERVER_KEY=your-firebase-server-key
 FCM_PROJECT_ID=your-firebase-project-id
@@ -111,7 +111,7 @@ RATE_LIMIT_PER_MINUTE=1000
 CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:3003,http://localhost:3010
 
 # =============================================================================
-# Development Settings
+# Environment Settings
 # =============================================================================
 DEBUG=true
 
@@ -122,16 +122,16 @@ LOG_LEVEL=debug
 LOG_FORMAT=console
 LOG_TO_CONSOLE=true
 LOG_TO_FILE=true
-LOG_FILE_PATH=./logs/notification-service-local.log
+LOG_FILE_PATH=./logs/notification-service.log
 
 # =============================================================================
 # Observability Configuration  
 # =============================================================================
-# Tracing
+# OpenTelemetry tracing configuration
 ENABLE_TRACING=true
 OTEL_SERVICE_NAME=notification-service
 OTEL_SERVICE_VERSION=1.0.0
 OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318/v1/traces
 
-# Correlation ID
+# Request correlation tracking
 CORRELATION_ID_HEADER=x-correlation-id
