feat(email): update SMTP configuration for local development using Mailpit

--- a/.env
+++ b/.env
@@ -66,15 +66,17 @@ JWT_EXPIRE=24h
 # Email Configuration
 # =============================================================================
 # Email service for notifications (development)
+# Using Mailpit: SMTP localhost:1025, Web UI at http://localhost:8025
+# Mailpit captures all emails for testing without external delivery
 EMAIL_ENABLED=true
 EMAIL_PROVIDER=smtp
-SMTP_HOST=sandbox.smtp.mailtrap.io
-SMTP_PORT=587
+SMTP_HOST=localhost
+SMTP_PORT=1025
 SMTP_SECURE=false
-SMTP_USER=bb31a0d6531b6c
-SMTP_PASS=6bd971ab2573bc
+SMTP_USER=
+SMTP_PASS=
 EMAIL_FROM_NAME=AI Outlet Notifications
-EMAIL_FROM_ADDRESS=noreply@aioutlet.com
+EMAIL_FROM_ADDRESS=noreply@aioutlet.local
 
 # =============================================================================
 # SMS Configuration
