--- a/.env.example
+++ b/.env.example
@@ -66,15 +66,17 @@ JWT_EXPIRE=24h
 # Email Configuration
 # =============================================================================
 # Email service for notifications
+# For local/dev: Use Mailpit (SMTP on localhost:1025, Web UI at localhost:8025)
+# For production: Use SendGrid, AWS SES, or other transactional email service
 EMAIL_ENABLED=true
 EMAIL_PROVIDER=smtp
-SMTP_HOST=your-smtp-host
-SMTP_PORT=587
+SMTP_HOST=localhost
+SMTP_PORT=1025
 SMTP_SECURE=false
-SMTP_USER=your-smtp-username
-SMTP_PASS=your-smtp-password
-EMAIL_FROM_NAME=Your App Notifications
-EMAIL_FROM_ADDRESS=noreply@yourdomain.com
+SMTP_USER=
+SMTP_PASS=
+EMAIL_FROM_NAME=AI Outlet Notifications
+EMAIL_FROM_ADDRESS=noreply@aioutlet.local
 
 # =============================================================================
 # SMS Configuration
