--- a/.env
+++ b/.env
@@ -19,9 +19,9 @@ API_VERSION=1.0.0
 # =============================================================================
 # MySQL connection - connects to Docker infrastructure
 DB_HOST=localhost
-DB_PORT=3306
-DB_NAME=notification_service_local_db
-DB_USER=notification_user
+DB_PORT=3307
+DB_NAME=notification_service_db
+DB_USER=notificationuser
 DB_PASSWORD=notification_dev_pass_123
 
 # =============================================================================
@@ -29,10 +29,11 @@ DB_PASSWORD=notification_dev_pass_123
 # =============================================================================
 # Connects to Docker infrastructure
 RABBITMQ_URL=amqp://admin:admin123@localhost:5672
+RABBITMQ_EXCHANGE=aioutlet.events
 RABBITMQ_EXCHANGE_ORDER=order.events
 RABBITMQ_EXCHANGE_USER=user.events
 RABBITMQ_EXCHANGE_NOTIFICATION=notification.events
-RABBITMQ_QUEUE_NOTIFICATIONS=notifications
+RABBITMQ_QUEUE_NOTIFICATIONS=notification-service.queue
 RABBITMQ_QUEUE_EMAIL=notifications.email
 RABBITMQ_QUEUE_SMS=notifications.sms
 RABBITMQ_QUEUE_PUSH=notifications.push
@@ -124,7 +125,7 @@ LOG_LEVEL=debug
 LOG_FORMAT=console
 LOG_TO_CONSOLE=true
 LOG_TO_FILE=true
-LOG_FILE_PATH=./logs/notification-service-local.log
+LOG_FILE_PATH=./logs/notification-service.log
 
 # =============================================================================
 # Observability Configuration  
