--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^10.0.0",
     "amqplib": "^0.10.8",
+    "colors": "^1.4.0",
     "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
+    "@types/colors": "^1.1.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.19.1",
