chore(env): clean up environment configuration and update message broker settings
refactor(logging): enhance console logging format and ensure consistent output

fix(tracing): improve tracing initialization logging and remove unnecessary console output

refactor(server): adjust import order for observability modules

--- a/.env.example
+++ b/.env.example
@@ -27,11 +27,9 @@ DB_PASSWORD=your-mysql-password
 # =============================================================================
 # Message Broker Configuration
 # =============================================================================
-# RabbitMQ connection and queue configuration
-RABBITMQ_URL=amqp://username:password@localhost:5672
-RABBITMQ_EXCHANGE_ORDER=order.events
-RABBITMQ_EXCHANGE_USER=user.events
-RABBITMQ_EXCHANGE_NOTIFICATION=notification.events
+# Message Broker Service Configuration
+MESSAGE_BROKER_SERVICE_URL=http://localhost:4000
+MESSAGE_BROKER_API_KEY=your-api-key
 RABBITMQ_QUEUE_NOTIFICATIONS=notifications
 RABBITMQ_QUEUE_EMAIL=notifications.email
 RABBITMQ_QUEUE_SMS=notifications.sms
