--- a/.env
+++ b/.env
@@ -27,41 +27,17 @@ DB_PASSWORD=notification_dev_pass_123
 # =============================================================================
 # Message Broker Configuration
 # =============================================================================
-# Connects to Docker infrastructure
+# RabbitMQ connection - connects to Docker infrastructure
 RABBITMQ_URL=amqp://admin:admin123@localhost:5672
 RABBITMQ_EXCHANGE=aioutlet.events
 RABBITMQ_EXCHANGE_ORDER=order.events
 RABBITMQ_EXCHANGE_USER=user.events
-RABBITMQ_EXCHANGE_NOTIFICATION=notification.events
 RABBITMQ_QUEUE_NOTIFICATIONS=notification-service.queue
-RABBITMQ_QUEUE_EMAIL=notifications.email
-RABBITMQ_QUEUE_SMS=notifications.sms
-RABBITMQ_QUEUE_PUSH=notifications.push
-
-# =============================================================================
-# Service Discovery
-# =============================================================================
-# Infrastructure services - connects to other microservices
-USER_SERVICE_URL=http://localhost:3002
-AUTH_SERVICE_URL=http://localhost:3001
-ADMIN_SERVICE_URL=http://localhost:3010
-AUDIT_SERVICE_URL=http://localhost:9000
-
-# =============================================================================
-# Cache Configuration
-# =============================================================================
-# Redis connection - connects to Docker infrastructure, uses database 5
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=redis_dev_pass_123
-REDIS_DB=5
-REDIS_URL=redis://:redis_dev_pass_123@localhost:6379/5
 
 # =============================================================================
 # Security Configuration
 # =============================================================================
 JWT_SECRET=your-super-secret-jwt-key-for-development-only
-JWT_EXPIRE=24h
 
 # =============================================================================
 # Email Configuration
@@ -78,45 +54,6 @@ SMTP_USER=
 SMTP_PASS=
 EMAIL_FROM_NAME=AI Outlet Notifications
 EMAIL_FROM_ADDRESS=noreply@aioutlet.local
-
-# =============================================================================
-# SMS Configuration
-# =============================================================================
-# SMS service for notifications (development)
-SMS_ENABLED=false
-SMS_PROVIDER=twilio
-TWILIO_ACCOUNT_SID=your-twilio-account-sid
-TWILIO_AUTH_TOKEN=your-twilio-auth-token
-SMS_FROM_NUMBER=your-twilio-phone-number
-
-# =============================================================================
-# Push Notification Configuration
-# =============================================================================
-# Push notification service (development)
-PUSH_ENABLED=false
-FCM_SERVER_KEY=your-firebase-server-key
-FCM_PROJECT_ID=your-firebase-project-id
-
-# =============================================================================
-# Notification Configuration
-# =============================================================================
-# Notification-specific settings
-EMAIL_TEMPLATE_PATH=./templates/email
-SMS_TEMPLATE_PATH=./templates/sms
-NOTIFICATION_RETRY_ATTEMPTS=3
-NOTIFICATION_RETRY_DELAY_MS=1000
-BATCH_SIZE=100
-RATE_LIMIT_PER_MINUTE=1000
-
-# =============================================================================
-# CORS Configuration
-# =============================================================================
-CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:3003,http://localhost:3010
-
-# =============================================================================
-# Development Settings
-# =============================================================================
-DEBUG=true
 
 # =============================================================================
 # Logging Configuration
