--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ DB_PASSWORD=notification_dev_pass_123
 # =============================================================================
 # Message Broker Configuration
 # =============================================================================
-# RabbitMQ connection - connects to Docker infrastructure
+# RabbitMQ connection - notification-service is a consumer for events
 RABBITMQ_URL=amqp://admin:admin123@localhost:5672
 RABBITMQ_EXCHANGE=aioutlet.events
 RABBITMQ_EXCHANGE_ORDER=order.events
