feat(messaging): implement message broker interface and RabbitMQ/Kafka support

--- a/.env
+++ b/.env
@@ -27,12 +27,20 @@ DB_PASSWORD=notification_dev_pass_123
 # =============================================================================
 # Message Broker Configuration
 # =============================================================================
+# Message broker type: rabbitmq or kafka
+MESSAGE_BROKER_TYPE=rabbitmq
+
 # RabbitMQ connection - notification-service is a consumer for events
 RABBITMQ_URL=amqp://admin:admin123@localhost:5672
 RABBITMQ_EXCHANGE=aioutlet.events
 RABBITMQ_EXCHANGE_ORDER=order.events
 RABBITMQ_EXCHANGE_USER=user.events
 RABBITMQ_QUEUE_NOTIFICATIONS=notification-service.queue
+
+# Kafka configuration (when MESSAGE_BROKER_TYPE=kafka)
+# KAFKA_BROKERS=localhost:9092,localhost:9093,localhost:9094
+# KAFKA_TOPICS=aioutlet.events
+# KAFKA_GROUP_ID=notification-service-group
 
 # =============================================================================
 # Security Configuration
