Refactor test imports to use shared directory structure
- Updated import paths in template.controller.test.ts to point to shared services and observability logging.
- Changed import paths in logger.test.ts to reflect the new shared structure for logging.
- Modified import statements in database.service.test.ts to use shared services and config.
- Adjusted email.service.test.ts to import from the shared services and observability logging.
- Updated ErrorResponse.test.ts to import from the shared utils directory.

--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "description": "Generic event-driven notification service",
   "type": "module",
-  "main": "dist/src/server.js",
+  "main": "dist/src/consumer/consumer.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "npm run dev:consumer",
+    "dev:api": "tsx watch src/api/server.ts",
+    "dev:consumer": "tsx watch src/consumer/consumer.ts",
+    "dev:both": "concurrently \"npm run dev:api\" \"npm run dev:consumer\"",
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "npm run start:consumer",
+    "start:api": "node dist/src/api/server.js",
+    "start:consumer": "node dist/src/consumer/consumer.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
