chore(database): remove obsolete notification templates and scripts

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # =============================================================================
-# Notification Service Local Development Configuration
+# Notification Service Environment Configuration Template
 # =============================================================================
-# This file is used for VS Code debugging when infrastructure runs in Docker
-# Copied to .env automatically by scripts/deploy.sh local
+# This file serves as a template for creating environment-specific .env files
+# Copy this file and rename it to .env, then fill in the appropriate values
 
 # =============================================================================
 # Service Configuration
@@ -17,42 +17,55 @@ API_VERSION=1.0.0
 # =============================================================================
 # Database Configuration
 # =============================================================================
-# MySQL connection - connects to Docker infrastructure
+# MySQL connection settings
 DB_HOST=localhost
-DB_PORT=3307
+DB_PORT=3306
 DB_NAME=notification_service_db
-DB_USER=notificationuser
-DB_PASSWORD=notification_dev_pass_123
+DB_USER=notification_user
+DB_PASSWORD=your-mysql-password
 
 # =============================================================================
 # Message Broker Configuration
 # =============================================================================
-# Message broker type: rabbitmq or kafka
-MESSAGE_BROKER_TYPE=rabbitmq
+# Message Broker Service Configuration
+MESSAGE_BROKER_SERVICE_URL=http://localhost:4000
+MESSAGE_BROKER_API_KEY=your-api-key
+RABBITMQ_QUEUE_NOTIFICATIONS=notifications
+RABBITMQ_QUEUE_EMAIL=notifications.email
+RABBITMQ_QUEUE_SMS=notifications.sms
+RABBITMQ_QUEUE_PUSH=notifications.push
 
-# RabbitMQ connection - notification-service is a consumer for events
-RABBITMQ_URL=amqp://admin:admin123@localhost:5672
-RABBITMQ_EXCHANGE=aioutlet.events
-RABBITMQ_EXCHANGE_ORDER=order.events
-RABBITMQ_EXCHANGE_USER=user.events
-RABBITMQ_QUEUE_NOTIFICATIONS=notification-service.queue
+# =============================================================================
+# Service Discovery
+# =============================================================================
+# URLs for connecting to other microservices
+USER_SERVICE_URL=http://localhost:3002
+AUTH_SERVICE_URL=http://localhost:3001
+ADMIN_SERVICE_URL=http://localhost:3010
+AUDIT_SERVICE_URL=http://localhost:9000
 
-# Kafka configuration (when MESSAGE_BROKER_TYPE=kafka)
-# KAFKA_BROKERS=localhost:9092,localhost:9093,localhost:9094
-# KAFKA_TOPICS=aioutlet.events
-# KAFKA_GROUP_ID=notification-service-group
+# =============================================================================
+# Cache Configuration
+# =============================================================================
+# Redis connection settings - notification service uses database 5
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=your-redis-password
+REDIS_DB=5
+REDIS_URL=redis://:your-redis-password@localhost:6379/5
 
 # =============================================================================
 # Security Configuration
 # =============================================================================
-JWT_SECRET=your-super-secret-jwt-key-for-development-only
+JWT_SECRET=your-jwt-secret-key-at-least-256-bits-long
+JWT_EXPIRE=24h
 
 # =============================================================================
 # Email Configuration
 # =============================================================================
-# Email service for notifications (development)
-# Using Mailpit: SMTP localhost:1025, Web UI at http://localhost:8025
-# Mailpit captures all emails for testing without external delivery
+# Email service for notifications
+# For local/dev: Use Mailpit (SMTP on localhost:1025, Web UI at localhost:8025)
+# For production: Use SendGrid, AWS SES, or other transactional email service
 EMAIL_ENABLED=true
 EMAIL_PROVIDER=smtp
 SMTP_HOST=localhost
@@ -62,6 +75,45 @@ SMTP_USER=
 SMTP_PASS=
 EMAIL_FROM_NAME=AI Outlet Notifications
 EMAIL_FROM_ADDRESS=noreply@aioutlet.local
+
+# =============================================================================
+# SMS Configuration
+# =============================================================================
+# SMS service for notifications (Twilio)
+SMS_ENABLED=false
+SMS_PROVIDER=twilio
+TWILIO_ACCOUNT_SID=your-twilio-account-sid
+TWILIO_AUTH_TOKEN=your-twilio-auth-token
+SMS_FROM_NUMBER=your-twilio-phone-number
+
+# =============================================================================
+# Push Notification Configuration
+# =============================================================================
+# Firebase Cloud Messaging for push notifications
+PUSH_ENABLED=false
+FCM_SERVER_KEY=your-firebase-server-key
+FCM_PROJECT_ID=your-firebase-project-id
+
+# =============================================================================
+# Notification Configuration
+# =============================================================================
+# Notification-specific settings
+EMAIL_TEMPLATE_PATH=./templates/email
+SMS_TEMPLATE_PATH=./templates/sms
+NOTIFICATION_RETRY_ATTEMPTS=3
+NOTIFICATION_RETRY_DELAY_MS=1000
+BATCH_SIZE=100
+RATE_LIMIT_PER_MINUTE=1000
+
+# =============================================================================
+# CORS Configuration
+# =============================================================================
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:3003,http://localhost:3010
+
+# =============================================================================
+# Environment Settings
+# =============================================================================
+DEBUG=true
 
 # =============================================================================
 # Logging Configuration
@@ -75,11 +127,11 @@ LOG_FILE_PATH=./logs/notification-service.log
 # =============================================================================
 # Observability Configuration  
 # =============================================================================
-# Tracing
+# OpenTelemetry tracing configuration
 ENABLE_TRACING=true
 OTEL_SERVICE_NAME=notification-service
 OTEL_SERVICE_VERSION=1.0.0
 OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318/v1/traces
 
-# Correlation ID
+# Request correlation tracking
 CORRELATION_ID_HEADER=x-correlation-id
