feat(logging): Implement unified logging system with Winston and structured log entries
- Added Logger class for handling logging with configurable options.
- Introduced logging schemas and log levels for structured logging.
- Created logging formats for JSON and console output.
- Integrated logger into the notification service for email notifications.
- Added tracing helpers and setup for OpenTelemetry integration.
- Developed a notification service to render and send notifications via email.
- Implemented a template service for managing notification templates in memory.
- Enhanced error handling and logging throughout the services.

--- a/.env
+++ b/.env
@@ -15,50 +15,34 @@ SERVICE_VERSION=1.0.0
 API_VERSION=1.0.0
 
 # =============================================================================
-# Database Configuration
-# =============================================================================
-# MySQL connection settings
-DB_HOST=localhost
-DB_PORT=3306
-DB_NAME=notification_service_db
-DB_USER=notification_user
-DB_PASSWORD=your-mysql-password
-
-# =============================================================================
 # Message Broker Configuration
 # =============================================================================
-# Message Broker Service Configuration
-MESSAGE_BROKER_SERVICE_URL=http://localhost:4000
-MESSAGE_BROKER_API_KEY=your-api-key
+# Broker type: rabbitmq, kafka, or azure-servicebus
+MESSAGE_BROKER_TYPE=rabbitmq
+
+# RabbitMQ Configuration (when MESSAGE_BROKER_TYPE=rabbitmq)
+RABBITMQ_URL=amqp://guest:guest@localhost:5672
+RABBITMQ_EXCHANGE=aioutlet.events
 RABBITMQ_QUEUE_NOTIFICATIONS=notifications
 RABBITMQ_QUEUE_EMAIL=notifications.email
 RABBITMQ_QUEUE_SMS=notifications.sms
 RABBITMQ_QUEUE_PUSH=notifications.push
 
-# =============================================================================
-# Service Discovery
-# =============================================================================
-# URLs for connecting to other microservices
-USER_SERVICE_URL=http://localhost:3002
-AUTH_SERVICE_URL=http://localhost:3001
-ADMIN_SERVICE_URL=http://localhost:3010
-AUDIT_SERVICE_URL=http://localhost:9000
+# Kafka Configuration (when MESSAGE_BROKER_TYPE=kafka)
+KAFKA_BROKERS=localhost:9092
+KAFKA_CLIENT_ID=notification-service
+KAFKA_GROUP_ID=notification-service-group
+KAFKA_TOPIC_NOTIFICATIONS=notifications
+KAFKA_TOPIC_EMAIL=notifications.email
+KAFKA_TOPIC_SMS=notifications.sms
+KAFKA_TOPIC_PUSH=notifications.push
 
-# =============================================================================
-# Cache Configuration
-# =============================================================================
-# Redis connection settings - notification service uses database 5
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=your-redis-password
-REDIS_DB=5
-REDIS_URL=redis://:your-redis-password@localhost:6379/5
-
-# =============================================================================
-# Security Configuration
-# =============================================================================
-JWT_SECRET=8tDBDMcpxroHoHjXjk8xp/uAn8rzD4y8ZZremFkC4gI=
-JWT_EXPIRE=24h
+# Azure Service Bus Configuration (when MESSAGE_BROKER_TYPE=azure-servicebus)
+AZURE_SERVICEBUS_CONNECTION_STRING=Endpoint=sb://your-namespace.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=your-key
+AZURE_SERVICEBUS_QUEUE_NOTIFICATIONS=notifications
+AZURE_SERVICEBUS_QUEUE_EMAIL=notifications-email
+AZURE_SERVICEBUS_QUEUE_SMS=notifications-sms
+AZURE_SERVICEBUS_QUEUE_PUSH=notifications-push
 
 # =============================================================================
 # Email Configuration
@@ -75,40 +59,6 @@ SMTP_USER=
 SMTP_PASS=
 EMAIL_FROM_NAME=AI Outlet Notifications
 EMAIL_FROM_ADDRESS=noreply@aioutlet.local
-
-# =============================================================================
-# SMS Configuration
-# =============================================================================
-# SMS service for notifications (Twilio)
-SMS_ENABLED=false
-SMS_PROVIDER=twilio
-TWILIO_ACCOUNT_SID=your-twilio-account-sid
-TWILIO_AUTH_TOKEN=your-twilio-auth-token
-SMS_FROM_NUMBER=your-twilio-phone-number
-
-# =============================================================================
-# Push Notification Configuration
-# =============================================================================
-# Firebase Cloud Messaging for push notifications
-PUSH_ENABLED=false
-FCM_SERVER_KEY=your-firebase-server-key
-FCM_PROJECT_ID=your-firebase-project-id
-
-# =============================================================================
-# Notification Configuration
-# =============================================================================
-# Notification-specific settings
-EMAIL_TEMPLATE_PATH=./templates/email
-SMS_TEMPLATE_PATH=./templates/sms
-NOTIFICATION_RETRY_ATTEMPTS=3
-NOTIFICATION_RETRY_DELAY_MS=1000
-BATCH_SIZE=100
-RATE_LIMIT_PER_MINUTE=1000
-
-# =============================================================================
-# CORS Configuration
-# =============================================================================
-CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:3003,http://localhost:3010
 
 # =============================================================================
 # Environment Settings
