--- a/package.json
+++ b/package.json
@@ -3,24 +3,17 @@
   "version": "1.0.0",
   "description": "Generic event-driven notification service",
   "type": "module",
-  "main": "dist/src/consumer/consumer.js",
+  "main": "dist/src/consumer.js",
   "scripts": {
-    "dev": "npm run dev:consumer",
-    "dev:api": "tsx watch src/api/server.ts",
-    "dev:consumer": "tsx watch src/consumer/consumer.ts",
-    "dev:both": "concurrently \"npm run dev:api\" \"npm run dev:consumer\"",
-    "build": "echo 'TypeScript transpilation handled by tsx/ts-node at runtime'",
-    "start": "npm run start:consumer",
-    "start:api": "node dist/src/api/server.js",
-    "start:consumer": "node dist/src/consumer/consumer.js",
+    "dev": "tsx watch src/consumer.ts",
+    "build": "tsc",
+    "start": "node dist/src/consumer.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --watchAll=false",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "db:seed": "tsx database/scripts/seed.ts",
-    "db:clear": "tsx database/scripts/clear.ts"
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [
     "notifications",
@@ -53,7 +46,6 @@
     "express-slow-down": "^2.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
