--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ API_VERSION=1.0.0
 MESSAGE_BROKER_TYPE=rabbitmq
 
 # RabbitMQ Configuration (when MESSAGE_BROKER_TYPE=rabbitmq)
-RABBITMQ_URL=amqp://guest:guest@localhost:5672
+RABBITMQ_URL=amqp://admin:admin123@localhost:5672
 RABBITMQ_EXCHANGE=aioutlet.events
 RABBITMQ_QUEUE_NOTIFICATIONS=notifications
 RABBITMQ_QUEUE_EMAIL=notifications.email
