--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@
 # =============================================================================
 NODE_ENV=development
 PORT=3003
+HEALTH_PORT=3003
 HOST=localhost
 SERVICE_NAME=notification-service
 SERVICE_VERSION=1.0.0
