--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ NODE_ENV=development
 PORT=3003
 HEALTH_PORT=3003
 HOST=localhost
-SERVICE_NAME=notification-service
-SERVICE_VERSION=1.0.0
+NAME=notification-service
+VERSION=1.0.0
 API_VERSION=1.0.0
 
 # =============================================================================
