--- a/.env
+++ b/.env
@@ -1,70 +1,45 @@
 # =============================================================================
-# Notification Service Environment Configuration Template
+# Notification Service Environment Configuration
 # =============================================================================
-# This file serves as a template for creating environment-specific .env files
-# Copy this file and rename it to .env, then fill in the appropriate values
+# Event-driven notification service using Dapr for pub/sub and secrets
 
 # =============================================================================
 # Service Configuration
 # =============================================================================
 NODE_ENV=development
 PORT=3003
-HEALTH_PORT=3003
 HOST=localhost
 NAME=notification-service
 VERSION=1.0.0
-API_VERSION=1.0.0
 
 # =============================================================================
-# Message Broker Configuration
+# Dapr Configuration
 # =============================================================================
-# Broker type: rabbitmq, kafka, or azure-servicebus
-MESSAGE_BROKER_TYPE=rabbitmq
-
-# RabbitMQ Configuration (when MESSAGE_BROKER_TYPE=rabbitmq)
-RABBITMQ_URL=amqp://admin:admin123@localhost:5672
-RABBITMQ_EXCHANGE=aioutlet.events
-RABBITMQ_QUEUE_NOTIFICATIONS=notifications
-RABBITMQ_QUEUE_EMAIL=notifications.email
-RABBITMQ_QUEUE_SMS=notifications.sms
-RABBITMQ_QUEUE_PUSH=notifications.push
-
-# Kafka Configuration (when MESSAGE_BROKER_TYPE=kafka)
-KAFKA_BROKERS=localhost:9092
-KAFKA_CLIENT_ID=notification-service
-KAFKA_GROUP_ID=notification-service-group
-KAFKA_TOPIC_NOTIFICATIONS=notifications
-KAFKA_TOPIC_EMAIL=notifications.email
-KAFKA_TOPIC_SMS=notifications.sms
-KAFKA_TOPIC_PUSH=notifications.push
-
-# Azure Service Bus Configuration (when MESSAGE_BROKER_TYPE=azure-servicebus)
-AZURE_SERVICEBUS_CONNECTION_STRING=Endpoint=sb://your-namespace.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=your-key
-AZURE_SERVICEBUS_QUEUE_NOTIFICATIONS=notifications
-AZURE_SERVICEBUS_QUEUE_EMAIL=notifications-email
-AZURE_SERVICEBUS_QUEUE_SMS=notifications-sms
-AZURE_SERVICEBUS_QUEUE_PUSH=notifications-push
+# Dapr handles pub/sub, secrets, and service invocation
+DAPR_ENABLED=true
+DAPR_HOST=localhost
+DAPR_HTTP_PORT=3503
+DAPR_GRPC_PORT=50003
+DAPR_APP_ID=notification-service
+DAPR_PUBSUB_NAME=notification-pubsub
 
 # =============================================================================
-# Email Configuration
+# Email Configuration (Non-Sensitive)
 # =============================================================================
-# Email service for notifications
+# Sensitive credentials (SMTP_USER, SMTP_PASS) are managed via Dapr secret store
 # For local/dev: Use Mailpit (SMTP on localhost:1025, Web UI at localhost:8025)
 # For production: Use SendGrid, AWS SES, or other transactional email service
 EMAIL_ENABLED=true
 EMAIL_PROVIDER=smtp
+EMAIL_FROM_NAME=AI Outlet Notifications
+EMAIL_FROM_ADDRESS=noreply@aioutlet.local
+
+# SMTP Configuration (can be overridden by Dapr secrets)
 SMTP_HOST=localhost
 SMTP_PORT=1025
 SMTP_SECURE=false
 SMTP_USER=
 SMTP_PASS=
-EMAIL_FROM_NAME=AI Outlet Notifications
-EMAIL_FROM_ADDRESS=noreply@aioutlet.local
-
-# =============================================================================
-# Environment Settings
-# =============================================================================
-DEBUG=true
 
 # =============================================================================
 # Logging Configuration
@@ -72,17 +47,11 @@ DEBUG=true
 LOG_LEVEL=debug
 LOG_FORMAT=console
 LOG_TO_CONSOLE=true
-LOG_TO_FILE=true
+LOG_TO_FILE=false
 LOG_FILE_PATH=./logs/notification-service.log
 
 # =============================================================================
-# Observability Configuration  
+# CORS Configuration
 # =============================================================================
-# OpenTelemetry tracing configuration
-ENABLE_TRACING=true
-OTEL_SERVICE_NAME=notification-service
-OTEL_SERVICE_VERSION=1.0.0
-OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318/v1/traces
-
-# Request correlation tracking
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:3010
 CORRELATION_ID_HEADER=x-correlation-id
