--- a/package.json
+++ b/package.json
@@ -28,47 +28,25 @@
   "license": "MIT",
   "dependencies": {
     "@dapr/dapr": "^3.6.1",
-    "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.52.1",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.55.0",
-    "@opentelemetry/sdk-node": "^0.55.0",
-    "@types/compression": "^1.8.1",
-    "@types/cookie-parser": "^1.4.9",
-    "@types/cors": "^2.8.19",
-    "@types/express-rate-limit": "^5.1.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/nodemailer": "^6.4.17",
-    "@types/uuid": "^10.0.0",
-    "amqplib": "^0.10.8",
-    "colors": "^1.4.0",
-    "compression": "^1.8.0",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.5.1",
-    "express-slow-down": "^2.1.0",
-    "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.3",
     "uuid": "^11.1.0",
-    "winston": "^3.17.0",
-    "zod": "^3.25.67"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@types/amqplib": "^0.10.7",
-    "@types/colors": "^1.1.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.19.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.3",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.34.0",
     "jest": "^30.0.3",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
-    "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.3",
