feat: update Dapr configuration, enhance service startup scripts, and refactor application structure

--- a/.env
+++ b/.env
@@ -1,45 +1,14 @@
 # =============================================================================
-# Notification Service Environment Configuration
+# Notification Service Configuration
 # =============================================================================
-# Event-driven notification service using Dapr for pub/sub and secrets
 
 # =============================================================================
 # Service Configuration
 # =============================================================================
 NODE_ENV=development
-PORT=3003
-HOST=localhost
+PORT=1011
 NAME=notification-service
 VERSION=1.0.0
-
-# =============================================================================
-# Dapr Configuration
-# =============================================================================
-# Dapr handles pub/sub, secrets, and service invocation
-DAPR_ENABLED=true
-DAPR_HOST=localhost
-DAPR_HTTP_PORT=3503
-DAPR_GRPC_PORT=50003
-DAPR_APP_ID=notification-service
-DAPR_PUBSUB_NAME=notification-pubsub
-
-# =============================================================================
-# Email Configuration (Non-Sensitive)
-# =============================================================================
-# Sensitive credentials (SMTP_USER, SMTP_PASS) are managed via Dapr secret store
-# For local/dev: Use Mailpit (SMTP on localhost:1025, Web UI at localhost:8025)
-# For production: Use SendGrid, AWS SES, or other transactional email service
-EMAIL_ENABLED=true
-EMAIL_PROVIDER=smtp
-EMAIL_FROM_NAME=AI Outlet Notifications
-EMAIL_FROM_ADDRESS=noreply@aioutlet.local
-
-# SMTP Configuration (can be overridden by Dapr secrets)
-SMTP_HOST=localhost
-SMTP_PORT=1025
-SMTP_SECURE=false
-SMTP_USER=
-SMTP_PASS=
 
 # =============================================================================
 # Logging Configuration
@@ -51,7 +20,22 @@ LOG_TO_FILE=false
 LOG_FILE_PATH=./logs/notification-service.log
 
 # =============================================================================
-# CORS Configuration
+# Dapr Configuration
 # =============================================================================
-CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:3010
-CORRELATION_ID_HEADER=x-correlation-id
+DAPR_HOST=localhost
+DAPR_HTTP_PORT=3511
+DAPR_GRPC_PORT=50011
+DAPR_APP_ID=notification-service
+DAPR_PUBSUB_NAME=notification-pubsub
+
+# =============================================================================
+# Email Configuration
+# =============================================================================
+EMAIL_ENABLED=true
+EMAIL_PROVIDER=smtp
+EMAIL_FROM_NAME=AI Outlet Notifications
+EMAIL_FROM_ADDRESS=noreply@aioutlet.local
+SMTP_HOST=localhost
+SMTP_PORT=1025
+SMTP_SECURE=false
+
