--- a/.dapr/components/pubsub.yaml
+++ b/.dapr/components/pubsub.yaml
@@ -7,16 +7,27 @@ spec:
   version: v1
   metadata:
     - name: connectionString
-      value: 'amqp://guest:guest@localhost:5672'
+      value: 'amqp://admin:admin123@localhost:5672'
+    - name: consumerID
+      value: 'notification-service'
     - name: durable
       value: 'true'
     - name: deletedWhenUnused
       value: 'false'
     - name: autoAck
       value: 'false'
-    - name: reconnectWait
-      value: '3s'
-    - name: concurrency
-      value: '10'
+    - name: deliveryMode
+      value: '2' # Persistent messages
+    - name: requeueInFailure
+      value: 'true'
     - name: prefetchCount
       value: '10'
+    - name: reconnectWait
+      value: '5'
+    - name: concurrency
+      value: 'parallel'
+    # Exchange configuration
+    - name: exchangeKind
+      value: 'topic'
+scopes:
+  - notification-service
