--- a/.dapr/components/event-bus.yaml
+++ b/.dapr/components/event-bus.yaml
@@ -1,13 +1,13 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: notification-pubsub
+  name: event-bus
 spec:
   type: pubsub.rabbitmq
   version: v1
   metadata:
     - name: connectionString
-      value: 'amqp://admin:admin123@localhost:5672'
+      value: 'amqp://admin:admin123@127.0.0.1:5672'
     - name: consumerID
       value: 'notification-service'
     - name: durable
@@ -17,7 +17,7 @@ spec:
     - name: autoAck
       value: 'false'
     - name: deliveryMode
-      value: '2' # Persistent messages
+      value: '2'
     - name: requeueInFailure
       value: 'true'
     - name: prefetchCount
@@ -26,7 +26,6 @@ spec:
       value: '5'
     - name: concurrency
       value: 'parallel'
-    # Exchange configuration
     - name: exchangeKind
       value: 'topic'
 scopes:
