feat: add secret store configuration and refactor DaprSecretManager for improved secret management

--- a/.dapr/config.yaml
+++ b/.dapr/config.yaml
@@ -3,6 +3,8 @@ kind: Configuration
 metadata:
   name: notification-service-config
 spec:
+  scheduler:
+    enabled: false
   tracing:
     samplingRate: '1'
     otel:
