--- a/.env
+++ b/.env
@@ -39,3 +39,9 @@ SMTP_HOST=localhost
 SMTP_PORT=1025
 SMTP_SECURE=false
 
+# =============================================================================
+# Security Configuration
+# =============================================================================
+# JWT_SECRET=8tDBDMcpxroHoHjXjk8xp/uAn8rzD4y8ZZremFkC4gI=
+JWT_ALGORITHM=HS256
+JWT_EXPIRATION=3600
