--- a/.env
+++ b/.env
@@ -34,7 +34,7 @@ DAPR_PUBSUB_NAME=event-bus
 EMAIL_ENABLED=true
 EMAIL_PROVIDER=smtp
 EMAIL_FROM_NAME=AI Outlet Notifications
-EMAIL_FROM_ADDRESS=noreply@aioutlet.local
+EMAIL_FROM_ADDRESS=noreply@xshopai.local
 SMTP_HOST=localhost
 SMTP_PORT=1025
 SMTP_SECURE=false
