feat: update branding references from AI Outlet to xshopai across documentation, configuration, and tests

--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ DAPR_PUBSUB_NAME=event-bus
 # =============================================================================
 EMAIL_ENABLED=true
 EMAIL_PROVIDER=smtp
-EMAIL_FROM_NAME=AI Outlet Notifications
+EMAIL_FROM_NAME=xshopai Notifications
 EMAIL_FROM_ADDRESS=noreply@xshopai.local
 SMTP_HOST=localhost
 SMTP_PORT=1025
